fixed search result tracks spacing

--- a/src/components/search-results-page/styles/search-results-tracks.css
+++ b/src/components/search-results-page/styles/search-results-tracks.css
@@ -1,6 +1,6 @@
 .search-results-tracks--container {
     grid-template-rows: 30px auto;
-    gap: 20px;
+    gap: 10px;
 }
 
 .search-results-tracks--header {
@@ -9,13 +9,14 @@
 
 .search-results-tracks--list {
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    grid-template-rows: repeat(auto-fit, 56px);
 }
 
 .search-results-tracks--track {
     grid-template-columns: 40px 1fr 50px;
     gap: 10px;
     align-items: center;
+    padding: 0 8px;
 }
 
 .search-results-tracks--track > img {
